--- a/app/home/templates/stock.html
+++ b/app/home/templates/stock.html
@@ -306,14 +306,14 @@
                                        data-content="">
                                             <i class="feather icon-help-circle"></i></a>
                                     </span>
-                                    <span class="col-sm-3 text-center" id="stock-pe">
+                                    <span class="col-sm-3 text-center" data-compare-id="industry-pe" data-compare-value="lower">
                                         {% if data.yahoo.trailingPE is defined %}
                                         {{ "%.2f" | format(data.yahoo.trailingPE) }}
                                         {% else %}
                                         N/A
                                         {% endif %}
                                     </span>
-                                    <span class="col-sm-3 text-center" id="industry-pe" data-compare="stock-pe"></span>
+                                    <span class="col-sm-3 text-center" id="industry-pe"></span>
                                 </div>
                                 <div class="row">
                                     <span class="col-sm-6">
@@ -324,8 +324,15 @@
                                        data-content="">
                                             <i class="feather icon-help-circle"></i></a>
                                     </span>
-                                    <span class="col-sm-3 text-center" id="stock-pb">{{ "%.2f" | format(data.yahoo.priceToBook) }}</span>
-                                    <span class="col-sm-3 text-center" id="industry-pb" data-compare="stock-pb"></span>
+                                    <span class="col-sm-3 text-center" data-compare-id="industry-pb" data-compare-value="lower">{{ "%.2f" | format(data.yahoo.priceToBook) }}</span>
+                                    <span class="col-sm-3 text-center" id="industry-pb"></span>
+                                </div>
+                                <div class="row">
+                                    <span class="col-sm-6">
+                                    1 Year Perf.
+                                    </span>
+                                    <span class="col-sm-3 text-center" data-compare-id="industry-perf_1y" data-compare-value="greater">{{  "%.2f" | format(data.math.perf_1y) }}%</span>
+                                    <span class="col-sm-3 text-center" id="industry-perf_1y"></span>
                                 </div>
                                 <div class="row">
                                     <span class="col-sm-6">
@@ -336,8 +343,8 @@
                                        data-content="">
                                             <i class="feather icon-help-circle"></i></a>
                                     </span>
-                                    <span class="col-sm-3 text-center" id=stock-div_yield">{{  "%.2f" | format(data.math.perf7) }}%</span>
-                                    <span class="col-sm-3 text-center" id="industry-div_yield" data-compare="stock-div_yield"></span>
+                                    <span class="col-sm-3 text-center">{{  "%.2f" | format(data.yahoo.dividendYield * 100) }}%</span>
+                                    <span class="col-sm-3 text-center" id="industry-div_yield"></span>
                                 </div>
                             </div>
                         </div>
@@ -389,18 +396,20 @@
 'use strict';
 $(document).ready(function() {
     fetch('/api/industry?name={{ data.yahoo.industry | urlencode }}').then((response) => {
-        response.json().then((data) => display_data(data, 'industry'))
+        response.json().then(data => {
+            display_data(data, 'industry');
+            compare_data();
+        });
     });
     fetch('/api/financials?symbol={{ data.yahoo.symbol | urlencode }}&type=income').then((response) => {
-        response.json().then((data) => show_financial(data, 'income'))
+        response.json().then((data) => show_financial(data, 'income'));
     });
     fetch('/api/financials?symbol={{ data.yahoo.symbol | urlencode }}&type=balance').then((response) => {
-        response.json().then((data) => show_financial(data, 'balance'))
+        response.json().then((data) => show_financial(data, 'balance'));
     });
     fetch('/api/pytrend?terms={{ data.yahoo.shortName | urlencode }}').then((response) => {
-        response.json().then((data) => show_pytrend(data))
+        response.json().then((data) => show_pytrend(data));
     });
-
 
     setTimeout(function() {
 
