comment obsolete menu and block. Clean UP.

--- a/app/base/templates/includes/sidebar.html
+++ b/app/base/templates/includes/sidebar.html
@@ -3,22 +3,22 @@
     <div class="navbar-wrapper  ">
         <div class="navbar-content scroll-div ">
             <ul class="nav pcoded-inner-navbar ">
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a href="/" class="nav-link ">
                             <span class="pcoded-micon">
                                 <i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
-                </li>
+                </li>-->
                 <li class="nav-item pcoded-hasmenu">
                     <a href="#!" class="nav-link "><span class="pcoded-micon"><i class="fas fa-landmark"></i></span><span
                             class="pcoded-mtext">Market</span></a>
-                    <ul class="pcoded-submenu">
+                    <ul class="pcoded-submenu" style="display: block;">
                         <li><a href="/market/index">Index</a></li>
                         <li><a href="/market/bonds">Bonds</a></li>
                         <li><a href="/market/commodities">Commodities</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav pcoded-inner-navbar ">
+            <!--<ul class="nav pcoded-inner-navbar ">
                 <li class="nav-item pcoded-menu-caption">
                     <label>Navigation</label>
                 </li>
@@ -111,7 +111,7 @@
 						   <i class="feather icon-info"></i></span><span class="pcoded-mtext">Support</span></a>
                 </li>
 
-            </ul>
+            </ul>-->
 
         </div>
     </div>
