Update finance with yfinance

--- a/app/home/templates/stock.html
+++ b/app/home/templates/stock.html
@@ -91,7 +91,7 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr id="totalRevenue">
+                                            <tr id="TotalRevenue">
                                                 <th>Total Revenue <a class="help" data-toggle="popover"
                                                                      title="Total Revenue"
                                                                      data-content="Revenue is the income generated from normal business
@@ -101,7 +101,7 @@
                                                         class="feather icon-help-circle f-16"></i></a>
                                                 </th>
                                             </tr>
-                                            <tr id="costOfRevenue">
+                                            <tr id="CostOfRevenue">
                                                 <th>(Cost of Revenue) <a class="help" data-toggle="popover"
                                                                          title="Cost of Revenue"
                                                                          data-content="The cost of revenue is the total cost of
@@ -110,7 +110,7 @@
                                                         class="feather icon-help-circle f-16"></i></a>
                                                 </th>
                                             </tr>
-                                            <tr id="grossProfit">
+                                            <tr id="GrossProfit">
                                                 <th>Gross Profit <a class="help" data-toggle="popover"
                                                                     title="Cost of Revenue"
                                                                     data-content="Gross profit is the profit a company makes after
@@ -120,7 +120,7 @@
                                                            calculated by subtracting the cost of revenue (Cost of Goods Sold COGS) from total revenue."><i
                                                         class="feather icon-help-circle f-16"></i></a></th>
                                             </tr>
-                                            <tr id="operatingExpenses">
+                                            <tr id="TotalOperatingExpenses">
                                                 <th>(Operating Expense) <a class="help" data-toggle="popover"
                                                                            title="Cost of Revenue"
                                                                            data-content="Operating expenses, or OPEX for short, are the costs involved in running the day-to-day operations
@@ -128,7 +128,7 @@
                                                            Operating Expenses take in R&D and SG&A (Selling, General, and Administrative Expenses) expenses."><i
                                                         class="feather icon-help-circle f-16"></i></a></th>
                                             </tr>
-                                            <tr id="operatingIncome">
+                                            <tr id="OperatingIncome">
                                                 <th>Operating Income <a class="help" data-toggle="popover"
                                                                         title="Cost of Revenue"
                                                                         data-content="Operating income is an accounting figure that measures the amount
@@ -136,7 +136,7 @@
                                                            operating expenses such as wages, depreciation, and cost of goods sold (COGS)."><i
                                                         class="feather icon-help-circle f-16"></i></a></th>
                                             </tr>
-                                            <tr id="ebit">
+                                            <tr id="Ebit">
                                                 <th>EBIT</th>
                                             </tr>
                                             </tbody>
